[tool.poetry]
name = "arquivos"
version = "0.1.0"
description = ""
authors = ["Renan Andrade <Fel9.renan02@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.6.0"
unidecode = "^1.3.6"

[tool.poetry.dev-dependencies]
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
